<resources>
    <string name="app_name">Calucladora Notas</string>

    <string name="hello_world">Hello world!</string>
    <string name="title">Calcula La Nota Final de La Materia</string>
    <string name="help">Ingrese Sus Notas a Continuación</string>
    <string name="porce">Ingrese Los Porcentajes de las Notas</string>
    <string name="quices">Quices (15%)</string>
    <string name="exp">Exposiciones (10%)</string>
    <string name="lab">Laboratorios (40%)</string>
    <string name="profinal">Proyecto Final (35%)</string>
    <string name="defi">Su Nota Final es </string>

    <string name="quizes">Quices </string>
    <string name="expo"> Exposiciones </string>
    <string name="labo"> Laboratorios </string>
    <string name="finalpro">Proyecto Final </string>
    <string name="cal">Calcular </string>
    <string name="reset"> Nuevo </string>

    <string name="gano"> Ganó la Materia </string>
    <string name="perdio"> Perdio la Materia </string>
    <string name="faltan"> Faltan Datos </string>
    <string name="input"> Introduzca todas las notas </string>
    <string name="erroneas"> Notas Erróneas </string>
    <string name="cerocinco"> Las Notas son entre cero y 5 </string>
    <string name="acerca"> Acerca de</string>


    <string name="action_settings">Settings</string>
    <string name="hechopor">Acerca de</string>
    <string name="aceptar">Aceptar</string>
    <string name="taviso">Aplicación Que calcula la definitiva de un Curso de Móviles</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_configurar_notas">ConfigurarNotas</string>
</resources>
