<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:focusable="false"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff0a21ff"
        />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/porce"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:textColor="#ffff850c"
        />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quices"
            android:textSize="20dp"
            android:textColor="#ffff0a16"
            android:layout_weight="1.8"
            android:textStyle="italic"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quizes"
            android:textSize="15dp"
            android:inputType="numberDecimal"
            android:layout_weight="1.5"
            android:id="@+id/eeQuiz"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exp"
            android:textSize="20dp"
            android:textColor="#ffff0a16"
            android:layout_weight="1.8"
            android:textStyle="italic"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expo"
            android:textSize="15dp"
            android:inputType="numberDecimal"
            android:layout_weight="1.5"
            android:id="@+id/eeExp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab"
            android:textSize="20dp"
            android:textColor="#ffff0a16"
            android:layout_weight="1.8"
            android:textStyle="italic"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labo"
            android:textSize="15dp"
            android:inputType="numberDecimal"
            android:layout_weight="1.5"
            android:id="@+id/eeLaboratorio"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profinal"
            android:textSize="19.7dp"
            android:textColor="#ffff0a16"
            android:layout_weight="1.8"
            android:textStyle="italic"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/finalpro"
            android:textSize="15dp"
            android:inputType="numberDecimal"
            android:layout_weight="1.5"
            android:id="@+id/eeProfinal"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        >


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/bbaceptar"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="0dip"

            />


    </LinearLayout>







</LinearLayout>